# py-level

./: .env.example  .env.testing  .gitignore  LICENSE  MANIFEST.in  README.md  app.py  delivery-service.md  publish.sh  pyproject.toml  requirements.txt  setup.py  tree.txt
app/Http/: __init__.py
app/Providers/: ViewServiceProvider.py  __init__.py
app/models/: user.py
app/requests/: UserRegistration.py
app/routes/: web.py
config/: app.py  cache.py  database.py  mail.py  queue.py  services.py
core/: __init__.py
core/cache/: cache.py
core/config/: loader.py
core/console/: command.py  kernel.py
core/database/: __init__.py  connection.py  migrations.py  schema.py
core/events/: event.py
core/exceptions/: handler.py  validation.py
core/facade/: __init__.py  app.py  asset.py  cache.py  collection.py  config.py  db.py  env.py  event.py  facade.py  file.py  helpers.py  log.py  (+8 more)
docs/: COMMANDS.md  FOLDER_STRUCTURE.md  configuration.md  env_variables.md  facades.md  framework_index.md  helpers_and_facades.md  requests.md  schema.md  slave-commands.md  validations.md
routes/: api.py  web.py
slave/: __init__.py  __main__.py  cli.py  command.py  config.py  controllers.py  example.py  exceptions.py  helpers.py  live_reload.py  migrations.py  models.py  process.py  response.py  server.py  view.py
tests/: __init__.py  config.py  run_tests.py  test_api.py  test_application.py  test_cache.py  test_config_loader.py  test_database.py  test_helpers.py  test_mail.py  test_queue.py  test_request.py  test_security.py  test_services.py  test_session.py  test_view.py
(+38 files in other folders)
