[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "pylevelframework/_version.py"

[project]
name = "pylevelframework"
dynamic = ["version"]
description = "A modern Python web framework inspired by Laravel"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "PyLevel Team", email = "pylevelframework@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-dotenv>=0.19.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "sqlalchemy>=1.4.0",
    "alembic>=1.7.0",
    "pydantic>=1.8.0",
    "requests>=2.26.0",
    "aiofiles>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/py-level/py-level"
Documentation = "https://github.com/py-level/py-level#readme"
Repository = "https://github.com/py-level/py-level.git"
Issues = "https://github.com/py-level/py-level/issues"

[project.scripts]
pylevel = "pylevelframework.cli:main" 